--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,13 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: gradle/gradle-build-action@v2
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-
     - name: build and test
-      uses: gradle/gradle-build-action@v2
       run: ./gradlew build test --continue --info
 
     - name: Publish to Nexus repository
