fix typo in workflow

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,8 +5,8 @@ on: [push, pull_request]
 env:
   MAVEN_USERNAME: ${{ secrets.OSSRHUSERNAME }}
   MAVEN_PASSWORD: ${{ secrets.OSSRHPASSWORD }}
-  GPG_PRIVATE_KEY: ${{ secrets.GNUPG_SECRET_KEY }}
-  PASSPHRASE: ${{ secrets.GPG_PASSWORD }}
+  GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+  PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
 
 
 jobs:
@@ -25,8 +25,8 @@ jobs:
       id: import_gpg
       uses: crazy-max/ghaction-import-gpg@v4
       with:
-        gpg_private_key: ${{secrets.GNUPG_SECRET_KEY}}
-        passphrase: ${{ secrets.GNUPG_PASSWORD }}
+        gpg_private_key: ${{secrets.SIGNING_GNUPG_SECRETKEY}}
+        passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
     - name: List Keys
       run: gpg -K
     - name: build and test
