--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,10 +3,10 @@ name: Android
 on: [push, pull_request]
 
 env:
-  MAVEN_USERNAME: ${{ secrets.OSSRHUSERNAME }}
-  MAVEN_PASSWORD: ${{ secrets.OSSRHPASSWORD }}
+  MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+  MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
   GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-  PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+  GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
 
 
 jobs:
@@ -16,17 +16,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: gradle/gradle-build-action@v2
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: GPG_PRIVATE_KEY
+        gpg-passphase: GPG_PASSPHRASE
     - name: Import GPG key
       id: import_gpg
       uses: crazy-max/ghaction-import-gpg@v4
       with:
-        gpg_private_key: ${{secrets.SIGNING_GNUPG_SECRETKEY}}
-        passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+        gpg_private_key: GPG_PRIVATE_KEY
+        passphrase: GPG_PASSPHRASE
     - name: List Keys
       run: gpg -K
     - name: build and test
