--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,20 +16,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
-        gpg-private-key: GPG_PRIVATE_KEY
-        gpg-passphrase: GPG_PASSPHRASE
     - name: Import GPG key
-      id: import_gpg
       uses: crazy-max/ghaction-import-gpg@v4
       with:
         gpg_private_key: GPG_PRIVATE_KEY
         passphrase: GPG_PASSPHRASE
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: GPG_PRIVATE_KEY
+        gpg-passphrase: GPG_PASSPHRASE
     - name: List Keys
       run: gpg -K
     - name: build and test
