--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,10 +17,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Import GPG key
+      id: import_gpg
       uses: crazy-max/ghaction-import-gpg@v4
       with:
-        gpg_private_key: GPG_PRIVATE_KEY
-        passphrase: GPG_PASSPHRASE
+        gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
+        passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+    - name: List Keys
+      run: gpg -K
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -30,8 +33,6 @@ jobs:
         server-password: MAVEN_PASSWORD
         gpg-private-key: GPG_PRIVATE_KEY
         gpg-passphrase: GPG_PASSPHRASE
-    - name: List Keys
-      run: gpg -K
     - name: build and test
       run: ./gradlew build test --continue --info
 
