--- a/build.gradle
+++ b/build.gradle
@@ -149,11 +149,10 @@ publishing{
         group = 'com.nifcloud.mbaas'
         maven(MavenPublication){
 
-            signing {
-                useGpgCmd()
-                //required { gradle.taskGraph.hasTask("publishing") }
-                sign publishing.publications
-            }
+//            signing {
+//                useGpgCmd()
+//                sign publishing.publications
+//            }
 
             pom{
                 name = 'ncmb_android'
