sign publish.publications

--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,7 @@ publishing{
 
             signing {
                 useGpgCmd()
-                sign configurations.archives
+                sign publishing.publications
             }
 
             pom{
