--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 env:
   MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
   MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+  GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
   GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
   GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
 
@@ -22,8 +23,6 @@ jobs:
       with:
         gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
         passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-    - name: List Keys
-      run: gpg -K
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -33,6 +32,12 @@ jobs:
         server-password: ${{ secrets.OSSRH_TOKEN }}
         gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
         gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+    - name: Restore gradle.properties
+      run: 
+        echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
+        echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
+        echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
+
     - name: build and test
       run: ./gradlew build test --continue --info
     - name: Publish to Nexus repository
