run gradle publish

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,9 +40,8 @@ jobs:
     - name: build and test
       run: ./gradlew build test --continue --info  --debug  --stacktrace --scan
     - name: Publish to Nexus repository
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: publish
+      run: |
+        gradle publish 
       env:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
