--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,10 @@ jobs:
       with:
         gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
         passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+    - name: List GPG keys
+      run: |
+        gpg2 --list-keys
+        gpg2 --list-secret-keys
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
