--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
         gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
         gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
     - name: Install git-crypt
-      run: sudo apt install -y git-crypt gnupg2
+      run: sudo apt-get install -y git-crypt gnupg2
     - name: Import private GPG key from variable GITHUB_SECRETS_PRIVATE_GPG_KEY
       run: echo "${{ secrets.SIGNING_GNUPG_SECRETKEY }}" | gpg2 --import
     - name: List GPG keys
