--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,12 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Import GPG key
-      id: import_gpg
-      uses: crazy-max/ghaction-import-gpg@v4
-      with:
-        gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}.keys[0]
-        passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -28,20 +22,14 @@ jobs:
         server-password: ${{ secrets.OSSRH_TOKEN }}
         gpg-private-key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
         gpg-passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-    - name: Restore gradle.properties
-      env:
-        GPG_KEY_ID: ${{ secrets.SIGNING_GNUPG_KEYID}}
-        GPG_PRIVATE_KEY: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
-        GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
-      shell: bash
-      run: |
-        echo "signing.gnupg.keyId=$GPG_KEY_ID" >> ./gradle.properties
-        echo "signing.gnupg.password=$GPG_PASSPHRASE" >> ./gradle.properties
-        echo "signing.gnupg.secretKeyRingFile=$GPG_PRIVATE_KEY" >> ./gradle.properties
     - name: Publish to Nexus repository
-      run: |
-        gradle publish 
-      env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-        MAVEN_GPG_PASSPHRASE: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
+      uses: sonatype-nexus-community/nexus-repo-github-action@master
+      with:
+        serverUrl: https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+        username: ${{ secrets.OSSRH_USERNAME }}
+        password: ${{ secrets.OSSRH_TOKEN }}
+        format: maven2
+        repository: ncmb_android
+        coordinates: groupId=com.nifcloud.mbaas
+        assets: extension=jar
+        filename: ../ncmb_android
