update build gradle

--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,7 @@ artifacts {
 
 signing {
     useGpgCmd()
-    //required { gradle.taskGraph.hasTask("uploadArchives") }
+    required { gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
 
