Update job for makejar

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -54,7 +54,9 @@ jobs:
         run: ./gradlew build test --continue --info
 
       - name: makeJar
-        run: ./gradlew clean makeJar
+        run: |
+           ./gradlew clearJar
+           ./gradlew makeJar
       - name: upload NCMB.jar
         uses: actions/upload-artifact@v2
         with:
