--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -54,9 +54,9 @@ jobs:
         run: ./gradlew build test --continue --info
 
       - name: makeJar
-        run: |
-           ./gradlew clearJar
-           ./gradlew makeJar
+        run:
+           ./gradlew clean makeJar
+           ls /home/runner/work/ncmb_android/release/NCMB.jar
       - name: upload NCMB.jar
         uses: actions/upload-artifact@v2
         with:
