Update job for makejar

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -61,4 +61,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: NCMB.jar
-          path: /home/runner/work/ncmb_android/release/NCMB.jar
+          path: ./release/NCMB.jar
