--- a/.github/workflows/reference.yml
+++ b/.github/workflows/reference.yml
@@ -9,10 +9,15 @@ jobs:
   generate_reference:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: use node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '12.x'
+      - run: npm ci
       - name: generate reference
         run: npm run document:generate
