--- a/.github/workflows/reference.yml
+++ b/.github/workflows/reference.yml
@@ -13,6 +13,8 @@ jobs:
           distribution: 'temurin'
           java-version: 11
           cache: 'gradle'
+      - name: Build with Gradle
+        run: ./gradlew
       - name: Generate reference
         run: ./gradlew javadoc
       - name: Setup git
