--- a/build.gradle
+++ b/build.gradle
@@ -117,6 +117,11 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+task myJavadoc(type: Javadoc) {
+    description = 'Generates API documents.'
+    source = android.sourceSets.main.java.srcDirs
+}
+
 artifacts {
     archives javadocJar, sourcesJar
 }
