--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -58,7 +58,16 @@ jobs:
            ./gradlew clean makeJar
            ls ./release/NCMB.jar
       - name: upload NCMB.jar
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: NCMB.jar
           path: ./release/NCMB.jar
+      - name: Generate reference
+        run: ./gradlew docsJavadoc
+      - name: zip docs
+        run: zip -r docs.zip javadoc/
+      - name: Archive docs
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: docs.zip
