--- a/build.gradle
+++ b/build.gradle
@@ -119,8 +119,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 task docsJavadoc(type: Javadoc) {
     description = 'Generates API documents for Reference'
-    source = android.sourceSets.main.java.srcDirs
-    into('docs/')
+    destinatinDir = file("docs")
 }
 
 artifacts {
