--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,7 +63,7 @@ jobs:
           name: NCMB.jar
           path: ./release/NCMB.jar
       - name: Generate reference
-        run: gradle javadoc
+        run: ./gradlew clean javadoc
       - name: zip docs
         run: zip -r docs.zip javadoc/
       - name: Archive docs
