--- a/build.gradle
+++ b/build.gradle
@@ -117,7 +117,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-javadocRef {
+javadoc {
     description = 'Generates API documents for Reference'
     destinatinDir = file("docs")
 }
