--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 task generateReference (type:Javadoc) {
     description = 'Generates API documents for Reference'
+    source = android.sourceSets.main.java.srcDirs
     destinationDir = reporting.file("docs")
 }
 
