--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,7 +63,9 @@ jobs:
           name: NCMB.jar
           path: ./release/NCMB.jar
       - name: Generate reference
-        run: ./gradlew generateReference
+        run: |
+          ./gradlew generateReference
+          cat /Users/runner/work/ncmb_android/build/tmp/generateReference/javadoc.options
       - name: zip docs
         run: zip -r docs.zip javadoc/
       - name: Archive docs
