use javadoc without generateJavadoc

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,8 @@ task sourcesJar(type: Jar) {
 task javadoc(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    destinationDir = reporting.file("docs")
+
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -117,13 +119,13 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-task generateReference (type:Javadoc) {
-    description = 'Generates API documents for Reference'
-    source = "ncmb_android-4.1.1-sources.jar"
-    destinationDir = reporting.file("docs")
-    options.charSet("utf-8")
-    options.showFromPublic()
-}
+// task generateReference (type:Javadoc) {
+//     description = 'Generates API documents for Reference'
+//     source = "ncmb_android-4.1.1-sources.jar"
+//     destinationDir = reporting.file("docs")
+//     options.charSet("utf-8")
+//     options.showFromPublic()
+// }
 
 artifacts {
     archives javadocJar, sourcesJar
