--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,8 +62,8 @@ jobs:
         with:
           name: NCMB.jar
           path: ./release/NCMB.jar
-      - name: Generate reference
-        run: ./gradlew generateReference --ignore-source-errors
+      # - name: Generate reference
+      #   run: ./gradlew generateReference --ignore-source-errors
       - name: zip docs
         run: zip -r docs.zip javadoc/
       - name: Archive docs
