--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,8 +62,6 @@ jobs:
         with:
           name: NCMB.jar
           path: ./release/NCMB.jar
-      # - name: Generate reference
-      #   run: ./gradlew generateReference --ignore-source-errors
       - name: zip docs
         run: zip -r docs.zip build/docs/javadoc/
       - name: Archive docs
@@ -71,3 +69,19 @@ jobs:
         with:
           name: docs
           path: docs.zip
+      - run: mv build/docs/javadoc/ docs/
+      - name: Setup git
+        env:
+            EMAIL: ${{ secrets.EMAIL }}
+        run: |
+          git config --global user.email "$EMAIL"
+          git config --global user.name "ncmbadmin"
+      - name: Commit docs
+        run: |
+          if ! git diff --exit-code --quiet
+          then
+            git add .
+            git commit -m "Auto replace reference files"
+            git pull
+            git push origin develop
+          fi
