Add remove-docs step

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -67,6 +67,7 @@ jobs:
           path: ./release/NCMB.jar
       
       - run: |
+          rm -r docs
           mkdir docs
           mv build/docs/javadoc/ docs/
       - name: zip docs
