--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,6 +7,9 @@ jobs:
   build_and_test:
     runs-on: macOS-latest
     steps:
+      - run: |
+        rm -r docs
+        mkdir docs
       - uses: actions/checkout@v2
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
@@ -65,10 +68,7 @@ jobs:
         with:
           name: NCMB.jar
           path: ./release/NCMB.jar
-      - run: |
-          rm -r docs
-          mkdir docs
-          mv build/docs/javadoc/ docs/
+      - run: mv build/docs/javadoc/ docs/
       - name: zip docs
         run: zip -r docs.zip docs/
       - name: Archive docs
