--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,10 +7,9 @@ jobs:
   build_and_test:
     runs-on: macOS-latest
     steps:
-      - run: |
-          rm -r docs
-          mkdir docs
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -55,14 +54,14 @@ jobs:
           echo "ossrhUsername=$MAVEN_USERNAME" >> ./gradle.properties
           echo "ossrhPassword=$MAVEN_PASSWORD" >> ./gradle.properties
           cat ./gradle.properties
-
+      - run: |
+          rm -r docs/
+          mkdir docs
       - name: build and test Android SDK
         run: ./gradlew build test --continue --info
-
       - name: makeJar
         run: |
           ./gradlew clean makeJar
-          ls ./release/NCMB.jar
       - name: upload NCMB.jar
         uses: actions/upload-artifact@v3
         with:
