--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           name: NCMB.jar
           path: ./release/NCMB.jar
-      - run: mv build/docs/javadoc/ docs/
+      - run: mv build/docs/javadoc/javadoc/ docs/
       - name: zip docs
         run: zip -r docs.zip docs/
       - name: Archive docs
