Revert "Add --no-tty"
This reverts commit 4edd9d66449b86d8826ae445e620307762ebe64a.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           touch test.txt
           gpg -ab test.txt
-          gpg --verify --no-tty test.txt.asc
+          gpg --verify test.txt.asc
 
       - name: Restore setting values to gradle.properties
         env:
