--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,6 +4,17 @@ on:
     branches:
       - master
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build_and_test:
     runs-on: macOS-latest
@@ -53,9 +64,31 @@ jobs:
           echo "ossrhUsername=$MAVEN_USERNAME" >> ./gradle.properties
           echo "ossrhPassword=$MAVEN_PASSWORD" >> ./gradle.properties
           cat ./gradle.properties
-
+      - run: |
+          rm -r docs/
+          mkdir docs
       - name: build and test Android SDK
         run: ./gradlew build test --continue --info
-
+      - run: mv build/docs/javadoc/* docs/
+      - name: zip docs
+        run: zip -r docs.zip docs/
+      - name: Archive docs
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: docs.zip
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
       - name: Publish to Nexus repository
         run: ./gradlew uploadArchive
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
