--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,7 +2,7 @@ name: AndroidSDK_MasterCI
 on:
   push:
     branches:
-      - master
+      - temp
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -79,8 +79,7 @@ jobs:
           path: docs.zip
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      - name: Publish to Nexus repository
-        run: ./gradlew uploadArchive
+
 
   deploy:
     environment:
