--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -79,6 +79,10 @@ jobs:
           path: docs.zip
       - name: Setup Pages
         uses: actions/configure-pages@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: './docs'
 
 
   deploy:
