--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - master
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+  
 jobs:
   build_and_test:
     runs-on: macOS-latest
