--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,7 @@ jobs:
       - name: set up JDK 1.8
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: '8'
       - name: Install git-crypt
         run: |
           brew install gnupg
