--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,6 +16,7 @@ jobs:
       - name: set up JDK 1.8
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '8'
       - name: Install git-crypt
         run: |
