--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,11 +19,12 @@ jobs:
   build_and_test:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          distribution: 'temurin'
+          java-version: '8'
       - name: Install git-crypt
         run: |
           brew install gnupg
@@ -36,7 +37,7 @@ jobs:
 
       - name: Import GPG key
         id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
+        uses: crazy-max/ghaction-import-gpg@v5
         with:
           gpg_private_key: ${{ secrets.SIGNING_GNUPG_SECRETKEY }}
           passphrase: ${{ secrets.SIGNING_GNUPG_PASSWORD }}
