--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ local.properties
 .idea/modules.xml
 .idea/runConfigurations.xml
 .idea/vcs.xml
+.idea/.gitignore
+.idea/compiler.xml
+.idea/jarRepositories.xml
 
 # others
 .DS_Store
